[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
once_cell = "1.19"

[dependencies.ephemeral_vault]
path = "../ephemeral_vault/programs/ephemeral_vault"
